test/error/error.input56.zc
Unknown struct type:var1 on line 2
